@@ -4,6 +4,7 @@ import io.github.vzwingma.finances.budget.serverless.services.operations.busines
 import io.github.vzwingma.finances.budget.serverless.services.operations.business.model.operation.LigneOperation;
 import io.github.vzwingma.finances.budget.serverless.services.operations.business.model.operation.OperationEtatEnum;
 import io.github.vzwingma.finances.budget.serverless.services.operations.business.model.operation.OperationPeriodiciteEnum;
+import io.github.vzwingma.finances.budget.serverless.services.operations.business.model.operation.OperationStatutEnum;
 import io.github.vzwingma.finances.budget.serverless.services.operations.test.data.MockDataCategories;
 import io.github.vzwingma.finances.budget.serverless.services.operations.test.data.MockDataOperations;
 import io.github.vzwingma.finances.budget.services.communs.data.model.CategorieOperations;
@@ -13,7 +14,6 @@ import org.junit.jupiter.api.Test;
 
 import java.time.LocalDate;
 import java.time.Month;
-import java.time.temporal.ChronoField;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashSet;
@@ -57,7 +57,7 @@ class BudgetDataUtilsTest {
         List<LigneOperation> depenses = new ArrayList<>(Arrays.asList(depense1, depense2, depense3));
         LocalDate cd = BudgetDataUtils.getMaxDateListeOperations(depenses);
 
-        assertEquals(Month.OCTOBER.getValue(), cd.get(ChronoField.MONTH_OF_YEAR));
+        assertEquals(Month.OCTOBER, cd.getMonth());
     }
 
 
@@ -180,11 +180,11 @@ class BudgetDataUtilsTest {
 
     @Test
     void testClonePeriodiqueLigneOperationNonPeriodique() {
-        List<LigneOperation> clones = BudgetDataUtils.cloneOperationPeriodiqueToMoisSuivant(MockDataOperations.getOperationPrelevement());
+        List<LigneOperation> clones = BudgetDataUtils.cloneOperationPeriodiqueToMoisSuivant(MockDataOperations.getOperationPrelevement(), Month.JANUARY, 2010);
         assertNotNull(clones);
         assertEquals(1, clones.size());
 
-        LigneOperation clone = clones.get(0);
+        LigneOperation clone = clones.getFirst();
         assertNotNull(clone);
         assertNotNull(clone.getAutresInfos());
         assertNull(clone.getMensualite());
@@ -198,17 +198,17 @@ class BudgetDataUtilsTest {
         operationMensuelle.getMensualite().setProchaineEcheance(1);
         operationMensuelle.setEtat(OperationEtatEnum.REPORTEE);
 
-        List<LigneOperation> clones = BudgetDataUtils.cloneOperationPeriodiqueToMoisSuivant(operationMensuelle);
+        List<LigneOperation> clones = BudgetDataUtils.cloneOperationPeriodiqueToMoisSuivant(operationMensuelle, Month.JANUARY, 2010);
         assertNotNull(clones);
         assertEquals(2, clones.size());
 
-        LigneOperation opPrec = clones.get(0);
+        LigneOperation opPrec = clones.getFirst();
         assertNotNull(opPrec);
         assertEquals(OperationEtatEnum.PREVUE, opPrec.getEtat());
         assertNotNull(opPrec.getAutresInfos());
         assertEquals(OperationPeriodiciteEnum.PONCTUELLE, opPrec.getMensualite().getPeriode());
         assertEquals(-1, opPrec.getMensualite().getProchaineEcheance());
-
+        assertNull(opPrec.getMensualite().getDateFin());
 
         LigneOperation clone = clones.get(1);
         assertNotNull(clone);
@@ -219,22 +219,108 @@ class BudgetDataUtilsTest {
 
 
     @Test
+    void testClonePeriodiqueLigneOperationPeriodiqueEnRetard() {
+
+        LigneOperation operationMensuelle = MockDataOperations.getOperationMensuelleRealisee();
+        operationMensuelle.getMensualite().setProchaineEcheance(1);
+        operationMensuelle.setEtat(OperationEtatEnum.REPORTEE);
+
+        List<LigneOperation> clones = BudgetDataUtils.cloneOperationPeriodiqueToMoisSuivant(operationMensuelle, Month.JANUARY, 2010);
+        assertNotNull(clones);
+        assertEquals(2, clones.size());
+
+        LigneOperation opPrec = clones.getFirst();
+        assertNotNull(opPrec);
+        assertEquals(OperationEtatEnum.PREVUE, opPrec.getEtat());
+        assertNotNull(opPrec.getAutresInfos());
+        assertEquals(OperationPeriodiciteEnum.PONCTUELLE, opPrec.getMensualite().getPeriode());
+        assertEquals(-1, opPrec.getMensualite().getProchaineEcheance());
+        assertNull(opPrec.getMensualite().getDateFin());
+        assertEquals(OperationStatutEnum.EN_RETARD, opPrec.getStatuts().getFirst());
+    }
+
+
+    @Test
+    void testClonePeriodiqueLigneOperationPeriodiqueEnRetardAEcheance() {
+
+        LigneOperation operationMensuelle = MockDataOperations.getOperationMensuelleRealisee();
+        operationMensuelle.getMensualite().setProchaineEcheance(1);
+        LocalDate dateFinMinusOneMonth = operationMensuelle.getMensualite().getDateFin().minusMonths(1);
+        operationMensuelle.getMensualite().setDateFin(dateFinMinusOneMonth);
+        operationMensuelle.setEtat(OperationEtatEnum.REPORTEE);
+
+        List<LigneOperation> clones = BudgetDataUtils.cloneOperationPeriodiqueToMoisSuivant(operationMensuelle, Month.JANUARY, 2010);
+        assertNotNull(clones);
+        assertEquals(2, clones.size());
+
+        LigneOperation opPrec = clones.getFirst();
+        assertNotNull(opPrec);
+        assertEquals(OperationEtatEnum.PREVUE, opPrec.getEtat());
+        assertNotNull(opPrec.getAutresInfos());
+        assertEquals(OperationPeriodiciteEnum.PONCTUELLE, opPrec.getMensualite().getPeriode());
+        assertEquals(-1, opPrec.getMensualite().getProchaineEcheance());
+        assertNull(opPrec.getMensualite().getDateFin());
+        assertEquals(OperationStatutEnum.EN_RETARD, opPrec.getStatuts().getFirst());
+    }
+
+
+
+    @Test
     void testClonePeriodiqueLigneOperationPeriodiqueRealisee() {
 
         LigneOperation operationMensuelle = MockDataOperations.getOperationMensuelleRealisee();
         operationMensuelle.getMensualite().setProchaineEcheance(0);
         operationMensuelle.setEtat(OperationEtatEnum.REALISEE);
 
-        List<LigneOperation> clones = BudgetDataUtils.cloneOperationPeriodiqueToMoisSuivant(operationMensuelle);
+        List<LigneOperation> clones = BudgetDataUtils.cloneOperationPeriodiqueToMoisSuivant(operationMensuelle, Month.JANUARY, 2010);
         assertNotNull(clones);
         assertEquals(1, clones.size());
 
-        LigneOperation clone = clones.get(0);
+        LigneOperation clone = clones.getFirst();
         assertNotNull(clone);
         assertEquals(OperationEtatEnum.PREVUE, clone.getEtat());
         assertNotNull(clone.getAutresInfos());
         assertNotNull(clone.getMensualite());
     }
 
+
+
+    @Test
+    void testClonePeriodiqueLigneOperationPeriodiqueDerniereEcheance() {
+
+        LigneOperation operationMensuelle = MockDataOperations.getOperationMensuelleAEcheance();
+        operationMensuelle.getMensualite().setProchaineEcheance(0);
+        operationMensuelle.setEtat(OperationEtatEnum.REALISEE);
+
+        LocalDate dateFin = LocalDate.now();
+        List<LigneOperation> clones = BudgetDataUtils.cloneOperationPeriodiqueToMoisSuivant(operationMensuelle, dateFin.getMonth(), dateFin.getYear());
+        assertNotNull(clones);
+        assertEquals(1, clones.size());
+
+        LigneOperation clone = clones.getFirst();
+        assertNotNull(clone);
+        assertEquals(OperationEtatEnum.PREVUE, clone.getEtat());
+        assertNotNull(clone.getAutresInfos());
+        assertNotNull(clone.getMensualite());
+        assertEquals(OperationStatutEnum.DERNIERE_ECHEANCE, clone.getStatuts().getFirst());
+    }
+
+
+
+
+    @Test
+    void testClonePeriodiqueLigneOperationPeriodiqueEcheanceDepassee() {
+
+        LigneOperation operationMensuelle = MockDataOperations.getOperationMensuelleAEcheance();
+        operationMensuelle.getMensualite().setProchaineEcheance(0);
+        LocalDate dateFinMinusOneMonth = operationMensuelle.getMensualite().getDateFin().minusMonths(1);
+        operationMensuelle.getMensualite().setDateFin(dateFinMinusOneMonth);
+        operationMensuelle.setEtat(OperationEtatEnum.REALISEE);
+
+        LocalDate dateFin = LocalDate.now();
+        List<LigneOperation> clones = BudgetDataUtils.cloneOperationPeriodiqueToMoisSuivant(operationMensuelle, dateFin.getMonth(), dateFin.getYear());
+        assertNotNull(clones);
+        assertEquals(0, clones.size());
+    }
 
 }
